# reshaper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
data/: Blodsocker 2025-02-26.csv  Blodtryck.txt  Borsdata_2025-02-01.csv  Borsdata_2025-03-01.csv
src/: errorfield.rs  main.rs  models.rs  switch.rs  widgets.rs
src/models/: parser.rs  row.rs  table.rs
src/widgets/: errorfield.rs  switch.rs
