[package]
description = "Template-based parsing and transforming of a text file"
name = "reshaper"
authors = ["Roger Salomonsson <medicorab@gmail.com>"]
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31.0", default-features = false, features = ["glow", "persistence"] }
serde  = { version = "1.0.217" }

[build-dependencies]
winresource = "0.1.19"

[profile.dev]
debug = 2
opt-level = 0
# split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 1
opt-level = 3

[profile.release]
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
