[package]
description = "Template-based parsing and transforming of a text file"
name = "reshaper"
authors = ["Roger Salomonsson <medicorab@gmail.com>"]
version = "1.0.1"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["glow", "persistence"] }
egui_extras = "0.31.1"
serde  = "1.0.219"
regex  = "1.11.1"
dirs = "6.0.0"

# [dependencies.tracy]
# package = "tracy_full"
# version = "1.11.0"
# features = ["enable","sampling"]

[build-dependencies]
winresource = "0.1.20"

[profile.dev]
debug = 2
opt-level = 0
# split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 1
opt-level = 3

[profile.release]
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.clippy]
pedantic = "deny"
unsafe_code = "deny"
unwrap_used = "deny"
expect_used = "deny"
used_must_use = "deny"
panic = "deny"
